--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0, minimal-ui"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:creator" content="@mmazzarolo" />
+    <meta name="twitter:creator" content="@zinact" />
     <meta name="twitter:title" content="Ordinary Puzzles" />
     <meta name="twitter:description" content="A minimalistic puzzle game." />
     <meta
